Fixed a problem with the visibility of pulldowns

--- a/src/Resources/public/assets/easyExclude.css
+++ b/src/Resources/public/assets/easyExclude.css
@@ -5,22 +5,6 @@ div.easyExclude
     position: relative;
 }
 
-/**
- * Ugly hacks but there's no other way as some people sometimes forget to give both floating elements the class w50
- * which leads to the problem that the right one overlaps the left one and therefore can't be edited anymore
- */
-div.w50
-{
-    z-index: 50;
-}
-
-/*
-div.easyExclude:hover
-{
-    background: #ebfdd7;
-}
-*/
-
 input.easyExcludeCheckbox
 {
     position:absolute;
